bot: add tests